fix staff cannot access update customers + buildings they aren't assigned, create 403 UI for permission denied